--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^3.1.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5"
   },
