--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "graphql": "^15.5.1",
     "graphql-subscriptions": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5",
-    "subscriptions-transport-ws": "^0.9.19"
+    "mongoose": "^5.13.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
